見た目調整

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,12 @@
 
 .career dl dd {
     width: calc(100% - 8.5em);
-    padding: 0.5em 2.0em 3.0em;
+    padding: 0.5em 0em 3.0em 2.0em;
     border-left: 2px solid #ccc;
+}
+
+@media (max-width: 640px) {
+    .career dl dd {
+        padding: 0.5em 2.0em 3.0em;
+    }
 }
